fix: add absolute position and z-index to preloader resolves #95

--- a/generators/app/templates/src/300x250/styles/base/preloader.scss
+++ b/generators/app/templates/src/300x250/styles/base/preloader.scss
@@ -4,7 +4,9 @@ $preloader-width: 5px;
 .preloader {
   background: #fff;
   height: 100%;
+  position: absolute;
   width: 100%;
+  z-index: 999;
 
   .circle {
     border: $preloader-width solid #ddd;
